# mac-ecc

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pytest.yml
benchmarks/: test_benchmark_ecc.py  test_benchmark_modulus.py
cpu/modular_arithmetic_unit/notebooks/: 01_core_arithmetic.ipynb  02_fermat_inverse.ipynb  03_ecc_application.ipynb
cpu/modular_arithmetic_unit/notebooks/.ipynb_checkpoints/: 01_core_arithmetic-checkpoint.ipynb  02_fermat_inverse-checkpoint.ipynb  03_ecc_application-checkpoint.ipynb
cpu/modular_arithmetic_unit/source files/: fermat_inverse.py
cpu/modular_arithmetic_unit/source files/.ipynb_checkpoints/: ecc_application-checkpoint.py  mod_arithmetic-checkpoint.py
src/cpu/: constants.py  ecc.py  modulus.py
src/gpu/: 01_core_arithmetic_gpu.ipynb  02_fermat_inverse_gpu.ipynb  03_ecc_application_gpu.ipynb  kernels.py
tests/: test_ecc.py  test_modulus.py
