[project]
name = "mac-ecc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.6",
    "pycuda>=2026.1",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--color=yes",
    "--benchmark-time-unit=ms"
]
